--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
                 <button class="choice-button-style"  onclick="choose(8)">8</button>
                 <button class="choice-button-style"  onclick="choose(9)">9</button>
                 <button class="choice-button-style"  onclick="choose(10)">10</button>
+                <button class="choice-button-style"  onclick="choose(11)">11</button>
             </div>
         </div>
     
