--- a/index.html
+++ b/index.html
@@ -31,10 +31,17 @@
             <div>Номер игрока:</div>
             <div class="gameScreen-player" id="gameScreen-player">Ин</div>
             <div>Место:</div>
-            <div class="gameScreen-block" id="gameScreen-block" onclick="move()"></div>
+            <div class="gameScreen-block" id="gameScreen-block"></div>
+            <div class="gameScreen-block second" id="gameScreen-block-second"></div>
             <div class="gameScreen-role" id="gameScreen-role">Тр</div>
             
-            <button class="gameScreen-nextButton choice-button-style" id="gameScreen-nextButton">Следующий</button>
+
+
+
+           
+
+
+
         </div>
 
         <div class="timerScreen">
